working on authorization

--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,17 @@
               "src/styles.less"
             ],
             "scripts": [
+              "src/assets/libs/third_party/xmlToJSON.min.js",
+              "src/assets/libs/third_party/unorm.min.js",
+              "src/assets/libs/third_party/base64.js",
+              "src/assets/libs/third_party/jszip.min.js",
+              "src/assets/libs/third_party/mime-js.min.js",
               "node_modules/jquery/dist/jquery.min.js",
               "src/libs/jsmeetingmgmt/sdk/avayaMeetingManagementClient.js",
               "src/libs/jsuserconfig/sdk/avayaUserClient.js",
-              "src/libs/jsrecording/sdk/jscsdk/avayaRecordingClient.js"
+              "src/libs/jsrecording/sdk/jscsdk/avayaRecordingClient.js",
+              "src/libs/commpkg/sdk/AvayaClientServices.min.js",
+              "src/libs/jsrecording/sdk/jsplayerclient/jsPlayerClient.js"
             ]
           },
           "configurations": {
