--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@types/lodash": "^4.14.170",
     "grunt-merge-json": "^0.9.7",
     "jquery": "^3.5.1",
     "ngx-device-detector": "^2.1.1",
