--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lodash": "^4.14.170",
     "grunt-merge-json": "^0.9.7",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "ngx-device-detector": "^2.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
